--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conheça Santa Barbara D'Oeste</title>
-    <link href="css/estilo.css" rel="stylesheet" type="text/css" </head>
+    <link href="css/estilo.css" rel="stylesheet" type="text/css" 
+</head>
 
 <body>
     <main class="container">
         <h1>
             <a href=index.html>
-                O que eu mais gosto em Santa Bárbara D'Oeste </a>
+                O que eu mais gosto em Santa Bárbara D'Oeste 
+            </a>
         </h1>
 
         <div class="lugares">
@@ -33,60 +35,66 @@
                 </p>
                 <!-- Aqui eu termino a recomendação de um lugar -->
                 <div class="clear"></div>
-                </div>
+            </div>
 
-                <div class="lugar">
-                    <!-- Aqui eu começo a recomendação de um lugar -->
-                    <h2>Fazer um piquenique no Parque dos Ipês</h2>
-                    <img src="images/ipes.jpg" alt="Parque dos ipês">
-                    <p>
-                        Tanto no fim de tarde quanto aos finais de semana o Parque dos Ipês é sempre um bom local para
-                        passar um
-                        tempo com a família.
-                    </p>
-                    <p>
-                        Descubra mais sobre o Parque dos Ipês pesquisando no <a
-                            href="https://www.google.com/search?q=parque+dos+ipes+sbo" target="_blank">Google</a> sobre
-                        o local.
-                    </p>
-                    <!-- Aqui eu termino a recomendação de um lugar -->
-                    <div class="clear"></div>
-                    </div>
-
-
+            <div class="lugar">
+                <!-- Aqui eu começo a recomendação de um lugar -->
+                <h2>Fazer um piquenique no Parque dos Ipês</h2>
+                <img src="images/ipes.jpg" alt="Parque dos ipês">
+                <p>
+                    Tanto no fim de tarde quanto aos finais de semana o Parque dos Ipês é sempre um bom local para
+                    passar um
+                    tempo com a família.
+                </p>
+                <p>
+                    Descubra mais sobre o Parque dos Ipês pesquisando no <a
+                        href="https://www.google.com/search?q=parque+dos+ipes+sbo" target="_blank">Google</a> sobre
+                    o local.
+                </p>
+                <!-- Aqui eu termino a recomendação de um lugar -->
+                <div class="clear"></div>
+            </div>
 
 
 
-                    <div class="lugar">
-                        <!-- Aqui eu começo a recomendação de um lugar -->
-                        <h2>Caminhar no Caminho dos Flamboyants</h2>
-                        <img src="images/flamboyants.jpg" alt="Caminho dos Flamboyants" <p>
-                        Se exercitar é sempre algo recomendável, ainda mais se for em um local agradável e perto da
-                        natureza.
-                        <p>
-                            Veja no mapa aonde fica esse <a href="https://goo.gl/maps/Zevof1RGcgMo7UsD7"
-                                target="_blank">local</a>.
-                        </p>
-                        <!-- Aqui eu termino a recomendação de um lugar -->
-                        <div class="clear"></div>
-                        
-                    </div>
 
-<aside class="lateral">
- <ol>
-    <li>O bar Dona Beleza.</li>
-    <li>Cemiterio dos Americanos.</li>
-    <li>A Igreja matriz.</li>
-    <li>O Teatro municipal Manoel Lyra.</li>
-    <li>O parque dos Jacarandás</li>
- </ol>
-</aside>
-<footer class="rodape">
-    <p>
-        Um guia para você turista por aqui!
-        &#1F494;
-    </p>
-</footer>
+
+            <div class="lugar">
+                <!-- Aqui eu começo a recomendação de um lugar -->
+                <h2>Caminhar no Caminho dos Flamboyants</h2>
+                <img src="images/flamboyants.jpg" alt="Caminho dos Flamboyants" 
+                <p>
+                Se exercitar é sempre algo recomendável, ainda mais se for em um local agradável e perto da
+                natureza.
+                </p>
+                <p>
+                    Veja no mapa aonde fica esse <a href="https://goo.gl/maps/Zevof1RGcgMo7UsD7"
+                        target="_blank">local</a>.
+                </p>
+                <!-- Aqui eu termino a recomendação de um lugar -->
+                <div class="clear"></div>
+            </div>
+
+        </div>
+            <aside class="lateral">
+                <h3> E existem muitos outros lugares interessantes na cidade...</h3>
+                <ol>
+                    <li>O bar Dona Beleza.</li>
+                    <li>Cemiterio dos Americanos.</li>
+                    <li>A Igreja matriz.</li>
+                    <li>O Teatro municipal Manoel Lyra.</li>
+                    <li>O parque dos Jacarandás</li>
+                </ol>
+            </aside>
+            <footer class="rodape clear">
+                <p>
+
+                    Um guia para você turista por aqui!
+                    &#x1F30E;
+                    <br>
+                    Todos os direitos registrados &copy; &reg;
+                </p>
+            </footer>
 
     </main>
 
